Поправив лінію і фотки.

--- a/src/partials/our-programm.html
+++ b/src/partials/our-programm.html
@@ -5,7 +5,7 @@
                
                 <H2 class="our-programm__h2">Наша программа</H2>
                 <div class="our-programm_thumb">
-                    <div class="our-programm__img" src="./images/our-programm/our-programmimg.jpg" alt=" учитель с учениками"></div>
+                    <div class="our-programm__img" alt=" учитель с учениками"></div>
                     <div class="vl"></div>
                     <ul class="our-programm__list">
                         <li class=our-programm__list-outter>
