--- a/src/sass/layout/_our_programm.scss
+++ b/src/sass/layout/_our_programm.scss
@@ -69,6 +69,7 @@
   width: 280px;
   height: 718px;
   margin: 0 auto;
+  box-shadow: 0px 8px 26px rgb(0 0 0 / 10%);
 }
 
 .why-we__h2 {
@@ -106,7 +107,7 @@
     top: 10px;
     border-left: 1px solid $white;
     margin-left: 49px;
-    height: 1297px;
+    height: 1320px;
   }
 }
 
@@ -192,7 +193,7 @@
     top: 10px;
     border-left: 1px solid $white;
     margin-left: 57px;
-    height: 730px;
+    height: 752px;
   }
 }
 
@@ -286,6 +287,7 @@
     top: 1050px;
     width: 1314px;
     height: 398px;
+    
   }
 
   .why-we__h2 {
@@ -318,6 +320,7 @@
 
 .our-programm__img{
   position: absolute;
+  opacity: 50%;
   bottom: -34px;
   left: 180px;
  display: block;
@@ -332,7 +335,7 @@
  left: 343px;
 
  }
- @media screen and (min-width: 1344px) and (max-width: 1688px){
+ @media screen and (min-width: 1344px) {
   background-image: url(/images/our-programm/our-programmimgdesk.jpg );
   width: 680px;
   height: 502px;
