--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -421,10 +421,10 @@
     display: flex;
   }
 
-  .container_main_comment {
-    padding-left: 82px;
-    padding-right: 40px;
-  }
+  // .container_main_comment {
+  //   padding-left: 40px;
+  //   padding-right: 40px;
+  // }
   .comments__title {
     font-style: normal;
     font-weight: 800;
@@ -435,11 +435,11 @@
     margin-top: 50px;
     margin-bottom: 0;
   }
-  .comments-list {
-    padding-top: 0;
-    margin-right: 111px;
-    margin-left: 187px;
-  }
+  // .comments-list {
+  //   padding-top: 0;
+  //   margin-right: 111px;
+  //   margin-left: 187px;
+  // }
   // .comments .comments-main-foto__main-foto {
   //   min-width: 150px;
   //   min-height: 150px;
@@ -472,18 +472,20 @@
     margin-top: 20px;
     margin-bottom: 120px;
   }
-  .comments-list__description {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 28px;
-    // text-align: center;
-    color: var(--mob-grey-color);
-  }
+  // .comments-list__description {
+  //   font-style: normal;
+  //   font-weight: 500;
+  //   font-size: 18px;
+  //   line-height: 1.555;
+  //   // text-align: center;
+  //   color: var(--mob-grey-color);
+  //   outline: 1px solid red;
+  //   // margin-bottom: 51px;
+  // }
 
   .comments-list__item {
     padding-left: auto;
-    padding-right: 112px;
+    // padding-right: 112px;
 
     text-align: left;
   }
@@ -498,7 +500,13 @@
   .mobile-comment-container {
     position: relative;
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
-    padding: 40px;
+    padding-top: 50px;
+    padding-left: 40;
+    padding-right: 40px;
+    margin-left: 195px;
+    margin-right: 195px;
+    margin-bottom: 0;
+    padding-bottom: 0;
   }
 
   .mobile-comment-container::before {
@@ -527,23 +535,23 @@
     // outline: 1px solid teal;
     background-image: url('../images/arrow_right.svg');
   }
-  .container_main_comment {
-    // padding-left: 40px;
-    padding-right: 46px;
-  }
-  .comments__title {
-    font-style: normal;
-    font-weight: 800;
-    font-size: 26px;
-    line-height: 130%;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-top: 50px;
-    margin-bottom: 30px;
-  }
-  .comments-list {
-    display: flex;
-  }
+  // .container_main_comment {
+  //   // padding-left: 40px;
+  //   padding-right: 40px;
+  // }
+  // .comments__title {
+  //   font-style: normal;
+  //   font-weight: 800;
+  //   font-size: 46px;
+  //   line-height: 130%;
+  //   text-align: center;
+  //   letter-spacing: 0.03em;
+  //   margin-top: 50px;
+  //   margin-bottom: 30px;
+  // }
+  // .comments-list {
+  //   display: flex;
+  // }
   .comments .comments-main-foto__main-foto {
     // outline: 1px solid green;
     min-width: 150px;
