Add tablet and desktop

--- a/src/partials/programs.html
+++ b/src/partials/programs.html
@@ -1,5 +1,5 @@
 <section class="programs">
-    <div class="container">
+    <div class="programs-container container">
         <h2 class="programs-title">Наша программа</h2>
         <div class="programs-list-wrapper">
         <ul class="programs-list">
@@ -83,6 +83,7 @@
                 </ul>
             </li>
             <li class="programs-list-item"><h3 class="programs-list-subtitle">5 семестр</h3>
+                <p class="term-list-text"> </p>
                 <ul class="term-list">
                     <li class="term-desc-item">Revision</li>
                     <li class="term-desc-item">Tests</li>
