--- a/src/sass/layout/_programs.scss
+++ b/src/sass/layout/_programs.scss
@@ -3,6 +3,19 @@
   padding-bottom: 50px;
   background-color: var(--title-text-color);
 }
+.programs-container {
+  background-image: url(../images/program/lesson-mobile.png);
+  background-repeat: no-repeat;
+  background-size: 120px 137px;
+  background-position: bottom right;
+}
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .programs-container {
+    background-image: url(../images/program/lesson-mobile@2x.png);
+  }
+}
 .programs-title {
   padding-top: 50px;
   padding-bottom: 43px;
@@ -26,9 +39,9 @@
     content: ' ';
     display: block;
     position: absolute;
-    height: 1155px;
+    height: 1292px;
     left: 0;
-    top: 1.5%;
+    top: 1%;
     border-left: 1px solid var(--white-text-color);
   }
 }
@@ -39,7 +52,7 @@
   margin-bottom: 40px;
 }
 .programs-list-subtitle {
-  padding-bottom: 5px;
+  padding-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 2;
@@ -51,26 +64,40 @@
   &::before {
     content: ' ';
     display: block;
-    position: absolute;
-    left: -14%;
-    top: 5%;
+    margin-left: -25px;
+    margin-bottom: -20px;
     width: 12px;
     height: 12px;
     border-radius: 50%;
     background-color: var(--accent-color);
   }
 }
-.term-list-item:not(:last-child) {
-  margin-bottom: 8px;
+@media screen and (max-width: 767px) {
+  .term-list-item:not(:last-child) {
+    margin-bottom: 11px;
+  }
 }
 .term-list-text {
-  padding-bottom: 5px;
+  position: relative;
+  padding-left: 17px;
+  padding-bottom: 15px;
   font-weight: 700;
   font-size: 12px;
   line-height: 1.667;
   letter-spacing: 0.08em;
 
   color: var(--accent-color);
+
+  &::before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    top: 30%;
+    left: 0;
+    width: 12px;
+    height: 1px;
+    background-color: var(--accent-color);
+  }
 }
 .term-desc-item {
   font-weight: 500;
@@ -80,4 +107,143 @@
 
   color: var(--secondary-text-color);
   opacity: 0.5;
+}
+
+@media screen and (min-width: 768px) {
+  .programs-title {
+    padding-top: 60px;
+    padding-bottom: 52px;
+
+    font-size: 26px;
+    line-height: 1.3;
+    text-align: left;
+  }
+  .programs-list-wrapper {
+    padding-left: 69px;
+  }
+  .programs-list {
+    padding-left: 50px;
+
+    &::before {
+      height: 700px;
+      top: 1%;
+    }
+  }
+  .programs-list-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  .programs-list-subtitle {
+    padding-bottom: 15px;
+
+    &::before {
+      margin-left: -55px;
+    }
+  }
+  .term-list {
+    display: flex;
+  }
+  .term-list-item {
+    min-width: 176px;
+
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
+  .term-list-text {
+    &::before {
+      top: 25%;
+    }
+  }
+  .programs-container {
+    background-image: url(../images/program/lesson-tablet.png);
+    background-size: 384px 280px;
+  }
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .programs-container {
+      background-image: url(../images/program/lesson-tablet@2x.png);
+    }
+  }
+}
+@media screen and (min-width: 1344px) {
+  .programs-container.container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .programs-title {
+    padding-top: 120px;
+    padding-bottom: 100px;
+    padding-left: 184px;
+    border-bottom: 2px solid var(--white-text-color);
+
+    font-size: 46px;
+  }
+  .programs-list-wrapper {
+    padding-left: 20px;
+  }
+  .programs-list {
+    padding-top: 60px;
+    padding-left: 169px;
+    display: flex;
+
+    &::before {
+      display: none;
+    }
+  }
+  .programs-list-item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .programs-list-subtitle {
+    position: relative;
+    padding-bottom: 25px;
+    font-size: 20px;
+    line-height: 1.4;
+
+    &::before {
+      margin-left: 0;
+      margin-bottom: 0;
+      position: absolute;
+      top: -130%;
+      width: 17px;
+      height: 16px;
+    }
+  }
+  .term-list {
+    flex-direction: column;
+  }
+  .term-list-item {
+    &:not(:last-child) {
+      margin-right: 0;
+      margin-bottom: 25px;
+    }
+  }
+  .term-list-text {
+    padding-left: 27px;
+    font-size: 20px;
+    line-height: 1.65;
+
+    &::before {
+      top: 30%;
+      width: 20px;
+      height: 2px;
+    }
+  }
+  .term-desc-item {
+    max-width: 230px;
+    font-size: 18px;
+    line-height: 1.556;
+  }
+  .programs-container {
+    background-image: url(../images/program/lesson.png);
+    background-position: bottom left;
+    background-size: 672px 502px;
+  }
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .programs-container {
+      background-image: url(../images/program/lesson@2x.png);
+    }
+  }
 }
