--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -52,6 +52,6 @@
         src="./images/hero/girl-tablet.png" 
         alt="girl with ice-cream"
         sizes="20vw">
-        <div class="hero-circle"></div>
+        <!-- <div class="hero-circle"></div> -->
     </div>
 </section>
