media и container 1376px

--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -142,11 +142,13 @@
 }
 }
 
-@media screen and (min-width:1316px) {
+@media screen and (min-width: 1376px) {
     .problem-section-container {
-        max-width: 1316px;
+        max-width: 1376px;
+        padding: 0 30px;
         margin: 0 auto;
     }
+
     .problem {
         margin-bottom: 150px;
         height: 560px;
