--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -16,8 +16,9 @@
   }
 }
 
-@media screen and (min-width: 1316px) {
+@media screen and (min-width: 1376px) {
   .container {
-    max-width: 1316px;
+    max-width: 1376px;
+    padding: 0 30px;
   }
 }
