change position img

--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -80,7 +80,7 @@
   @media screen and (min-width: 1200px) {
     width: calc((100% - 60px) / 3);
     max-width: 329px;
-    margin-top: 259px;
+    margin-top: 199px;
     &:not(:last-child) {
       margin-right: 30px;
     }
@@ -113,7 +113,14 @@
   top: -25%;
   width: 100%;
   @media screen and (min-width: 1200px){
-    top: -40%;
+    top: -32%;
+    width: 335px;
+    height: 335px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px){
+    top: -20%;
+    width: 220px;
+    height: 226px;
   }
 
 }
