--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,5 +1,8 @@
 .footer {
   text-align: center;
+  max-width: 1680px;
+  margin-right: auto;
+  margin-left: auto;
   &-address {
     padding-top: 30px;
     padding-bottom: 30px;
