--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,4 @@
+<div>
 <section class="footer__contact">
     <div class="container">
         <div class="footer__contact-wrapper">
@@ -40,3 +41,4 @@
 
     <span class="footer__copyrite">&copy; Все права защищены, 2019</span>
 </section>
+</div>
