Назначил классы тегам и использовал переменные для цвета

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,52 +1,45 @@
 .footer {
-  background-color: #fff5f6;
+  background-color: $secondaryBgColor;
   padding-left: 20px;
   padding-right: 20px;
-
 }
 .footer-row {
-  font-family: Titan One;
+  font-family: 'Titan One', cursive;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 21px;
+  line-height: 1.167;
+  letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #FFA5BA;
+  color: $subtitleTextColor;
   margin-top: 0;
   margin-bottom: 17px;
+  padding-right: 100px;
+  padding-bottom: 43px;
+
+  & span {
+    font-size: 34px;
+    line-height: 1.14;
+
+    color: $titleTextColor;
+  }
 }
 
-ul {
-  list-style: none;
+.footer-socials-list {
   display: inline-flex;
 }
 
-h3 {
-  font-family: Titan One;
-font-style: normal;
-font-weight: normal;
-font-size: 34px;
-line-height: 1.14;
-letter-spacing: 0.04em;
-text-transform: uppercase;
-color: #D41443;
-padding-right: 100px;
-padding-bottom: 43px;
-}
-a {
-  text-decoration: none;
-}
 .copyright {
   font-family: DM Sans;
-font-style: normal;
-font-weight: bold;
-font-size: 14px;
-line-height: 1.52;
-text-align: center;
-color: #907E82;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.52;
+  text-align: center;
+  color: $secondaryTextColor;
 }
 .footer-socials {
-  border-bottom: 1px solid #E1E1E1;
+  border-bottom: 1px solid #e1e1e1;
 }
 .footer-text {
   display: block;
@@ -57,15 +50,12 @@ color: #907E82;
 }
 .socials-icon {
   position: absolute;
-  fill: #FFFFFF;
+  fill: $primaryWhiteColor;
   width: 32px;
   height: 32px;
-  background-color: #FEA5BB;
+  background-color: $subtitleTextColor;
   border-radius: 50%;
   display: flex;
   justify-content: right;
   align-items: center;
-  
 }
-
-
