Add bgi into programs

--- a/src/sass/layout/_programs.scss
+++ b/src/sass/layout/_programs.scss
@@ -2,8 +2,7 @@
   margin-top: 50px;
   padding-bottom: 50px;
   background-color: var(--title-text-color);
-}
-.programs-container {
+
   background-image: url(../images/program/lesson-mobile.png);
   background-repeat: no-repeat;
   background-size: 120px 137px;
@@ -12,7 +11,7 @@
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
-  .programs-container {
+  .programs {
     background-image: url(../images/program/lesson-mobile@2x.png);
   }
 }
@@ -154,14 +153,14 @@
       top: 25%;
     }
   }
-  .programs-container {
+  .programs {
     background-image: url(../images/program/lesson-tablet.png);
     background-size: 384px 280px;
   }
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    .programs-container {
+    .programs {
       background-image: url(../images/program/lesson-tablet@2x.png);
     }
   }
@@ -234,7 +233,7 @@
     font-size: 18px;
     line-height: 1.556;
   }
-  .programs-container {
+  .programs {
     background-image: url(../images/program/lesson.png);
     background-position: bottom left;
     background-size: 672px 502px;
@@ -242,7 +241,7 @@
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    .programs-container {
+    .programs {
       background-image: url(../images/program/lesson@2x.png);
     }
   }
