--- a/src/partials/manufacture.html
+++ b/src/partials/manufacture.html
@@ -3,31 +3,30 @@
   <div class="container">
     <h3 class="subtitle">tradition and love</h3>
     <h2 class="title">how it’s made?</h2>
-    <!-- <picture>
+    <picture>
       <source
         srcset="
-          ../images/manufacture/home-pic4-desktop.png    1x,
-          ../images/manufacture/home-pic4-desktop@2x.png 2x
+          ./images/manufacture/home-pic4-desktop.png    1x,
+          ./images/manufacture/home-pic4-desktop@2x.png 2x
         "
         media="(min-width: 1200px)"
       />
       <source
         srcset="
-          ../images/manufacture/home-pic4-tablet.png    1x,
-          ../images/manufacture/home-pic4-tablet@2x.png 2x
+          ./images/manufacture/home-pic4-tablet.png    1x,
+          ./images/manufacture/home-pic4-tablet@2x.png 2x
         "
         media="(min-width: 768px)"
       />
       <img
         srcset="
-          ../images/manufacture/home-pic4-mobile.png    1x,
-          ../images/manufacture/home-pic4-mobile@2x.png 2x
+          ./images/manufacture/home-pic4-mobile.png    1x,
+          ./images/manufacture/home-pic4-mobile@2x.png
         "
-        src="../images/manufacture/home-pic4-mobile.png"
+        src="./images/manufacture/home-pic4-mobile.png"
         alt="cow and milk"
       />
-    </picture> -->
-    <img src="./images/manufacture/home-pic4-mobile.png" alt="cow and milk" />
+    </picture>
     <p class="primary-text-manufacture">
       Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
       cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo
@@ -46,19 +45,19 @@
       Read more
     </button>
     <ul class="list list-manufacture">
-      <li class="item-milk">
+      <li class="item item-milk">
         <p class="number-manufacture">721</p>
         <p class="list-manufacture-text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="item-apple">
+      <li class="item item-apple">
         <p class="number-manufacture">16kg</p>
         <p class="list-manufacture-text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="item-lollipop">
+      <li class="item item-lollipop">
         <p class="number-manufacture">84</p>
         <p class="list-manufacture-text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
