--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -1,4 +1,3 @@
-
 .program {
   padding-top: 50px;
   padding-bottom: 537px;
@@ -188,11 +187,8 @@
 }
 
 @media screen and (min-width: 1376px) {
-  .program .container {
-    max-width: 1376px;
-    padding: 0 30px;
-  }
   .program {
+    position: relative;
     padding-top: 120px;
     padding-bottom: 363px;
 
@@ -276,5 +272,17 @@
       background-image: url('../images/program/program-desktop@2x.png');
     }
   }
-}
 
+  .program::before {
+    content: '';
+    position: absolute;
+    display: flex;
+    background-color: #ffffff;
+    height: 1px;
+    width: 100vw;
+    top: 277px;
+    left: 0px;
+    right: 0;
+    z-index: 100;
+  }
+}
