--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -18,6 +18,7 @@
   &-list {
     background-color: #ffffff;
     padding: 20px 30px;
+    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
   }
 
   &-item {
@@ -51,7 +52,7 @@
     padding-top: 189px;
 
     &-title {
-      margin-bottom: 60px;
+      margin-bottom: 30px;
       text-align: center;
       font-size: 26px;
       line-height: 1.31;
@@ -59,27 +60,17 @@
     }
 
     &-list {
-      display: flex;
-      flex-wrap: wrap;
-      padding: 0px 118px 25px 98px;
-      margin-left: -20px;
-      margin: -30px;
-    }
-
-    &-item {
-      margin-left: 20px;
-      margin-top: 30px;
+      display: grid;
+      grid-template-columns: auto auto;
+      grid-gap: 30px 20px;
+      padding: 30px 118px 25px 98px;
     }
   }
 }
 
 @media screen and (min-width: 1376px) {
-  .advantages .container {
-    max-width: 1376px;
-    padding: 0 30px;
-  }
-
   .advantages {
+    position: relative;
     margin-top: -199px;
     padding-top: 0px;
 
@@ -95,16 +86,14 @@
     }
 
     &-list {
-      padding: 38px 82px 70px 44px;
-      margin-left: -40px;
-      margin-top: -32px;
+      grid-template-columns: auto auto auto;
+      grid-gap: 32px 40px;
+      padding: 70px 82px 70px 84px;
     }
 
     &-item {
       font-size: 20px;
       line-height: 1.65;
-      margin-left: 40px;
-      margin-top: 32px;
       width: 356px;
     }
 
