--- a/src/sass/layouts/_manufacture.scss
+++ b/src/sass/layouts/_manufacture.scss
@@ -67,6 +67,16 @@
   margin-bottom: 37px;
   margin-left: (50px -20px);
   font-weight: 700;
+  &::after {
+    content: '';
+    width: 5px;
+    height: 8px;
+    display: inline-block;
+    margin-left: 14px;
+    background-image: url(../images/icons/half-arrow-right.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
 }
 .list-manufacture {
   padding-right: 70px;
