--- a/src/partials/backdrop-modal.html
+++ b/src/partials/backdrop-modal.html
@@ -1,6 +1,6 @@
 <div class="backdrop is-hidden" data-modal>
   <div class="modal-window">
-    <button class="close-btn" type="button" data-modal-close>
+    <button class="close-btn button animate" type="button" data-modal-close>
       <svg class="close-btn-icon" width="17" height="17" data-modal-close>
         <use class="close-btn-icon" href="./images/sprite.svg#close"></use>
       </svg>
