--- a/src/sass/layout/_program-section.scss
+++ b/src/sass/layout/_program-section.scss
@@ -188,6 +188,8 @@
     .program-section{
         padding-top: 60px;
         padding-bottom: 392px;
+
+        padding-left: 40px;
     }
 
     .title{
@@ -267,14 +269,14 @@
 
      .method-list-item:not(:last-child){
         margin-right: 50px;
+
+        width: 176px;
     }
 
-    .topic-list-item{
-        width: 176px;
 
-        &:not(:last-child){
+        .topic-list-item:not(:last-child){
             margin-bottom: 1px;
-        }
+        
     }
 
     .choose-list-item{
@@ -302,29 +304,30 @@
     }
 }
 
-@media screen and (min-width: 1344px) and (max-width: 1420px){
-    .program-list-item{
-        margin-right: 20px;
-        width: 225px;
-    }
+// @media screen and (min-width: 1344px) and (max-width: 1420px){
+//     .program-list-item{
+//         margin-right: 20px;
+//         width: 225px;
+//     }
 
-}
+// }
 
-@media screen and (min-width: 1420px){
-    .program-list-item{
-        margin-right: 30px;
-        width: 240px;
-    }
-}
+// @media screen and (min-width: 1420px){
+//     .program-list-item{
+//         margin-right: 30px;
+//         width: 240px;
+//     }
+// }
 
 //--------------------------------------------1344-------------------------
 
 
 @media screen and (min-width: 1344px){
+   
     .program-section{
         padding-top: 120px;
         padding-bottom: 363px;
-        padding-left: 169px;
+        padding-left: 183px;
     }
     
     .title{
@@ -355,10 +358,10 @@
        text-transform: none;
     }
     
-    // .program-list-item{
-    //     margin-right: 30px;
-    //     width: 240px;
-    // }
+    .program-list-item{
+        margin-right: 30px;
+        width: 240px;
+    }
 
     .method-list-text{
         font-size: 20px;
