--- a/src/sass/components/_feedback.scss
+++ b/src/sass/components/_feedback.scss
@@ -28,8 +28,6 @@
 }
 .main-sliding__photos {
   display: block;
-  width: 150px;
-  height: 150px;
 }
 
 .left__button,
@@ -84,7 +82,8 @@
 
   @media screen and (min-width: 768px) {
     max-width: 412px;
-    padding-left: 46px;
+    margin-left: 46px;
+    padding-left: 0px;
     padding-right: 0px;
   }
 
@@ -92,6 +91,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-left: 40px;
     max-width: 706px;
   }
 }
@@ -146,6 +146,7 @@
   font-size: 12px;
   line-height: 20px;
   text-align: center;
+  letter-spacing: initial;
   color: #3d3d3d;
 
   @media screen and (min-width: 1344px) {
@@ -158,6 +159,7 @@
 .read-more__link {
   color: #ff6b09;
   text-decoration: underline;
+  display: contents;
 }
 
 .feedback__container {
