--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -13,11 +13,11 @@
                 <div class="photo-and-icon__container">
                     <picture class="top-image__container">
                         <source media="(min-width: 768px)"
-                            srcset="/images/slider/slider-tablet6-min.jpg 1x, /images/slider/slider-tablet6@2x-min.jpg 2x">
+                            srcset="/images/slider/Ellipse8-min.jpg 1x, /images/slider/Ellipse8@2x-min.jpg 2x">
 
                         <source media="(min-width: 320px)"
-                            srcset="/images/slider/slider-mob-min.jpg 1x, /images/slider/slider-mob@2x-min.jpg 2x">
-                        <img class="main-sliding__photos" src="../src/images/slider/slider-mob-min.jpg" alt="фото">
+                            srcset="/images/slider/slider-mob6-min.jpg 1x, /images/slider/slider-mob@2x-min.jpg 2x">
+                        <img class="main-sliding__photos" src="/images/slider/slider-mob6-min.jpg" alt="фото">
                     </picture>
                     <svg class="icon-vk" width="30px" height="30px">
                         <use href="/images/icons/icons-sprite.svg#icon-vk"></use>
@@ -51,12 +51,14 @@
                     <use href="/images/icons/icons-sprite.svg#icon-strelkavpravo"></use>
                 </svg>
             </button>
+            <!-- small-icon__container -->
             <div class="small-icon__container">
                 <button type="button" class="bottom-left__button">
                     <svg width="40px" height="10px">
                         <use href="/images/icons/icons-sprite.svg#icon-strelkavlevo"></use>
                     </svg>
                 </button>
+                <!-- first-image__set -->
                 <ul class="first-image__set">
                     <li class="first-image__set-item">
                         <picture >
@@ -68,45 +70,46 @@
                     <li class="first-image__set-item">
                         <picture >
                             <source media="(min-width: 320px)"
-                                srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
-                            <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
+                                srcset="/images/slider/slider-mob4-min.jpg 1x, /images/slider/slider-mob4@2x-min.jpg 2x">
+                            <img class="bottom__photos" src="/images/slider/slider-mob4-min.jpg" alt="фото">
                         </picture>
                     </li>
                     <li class="first-image__set-item">
                         <picture >
                             <source media="(min-width: 320px)"
-                                srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
-                            <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
+                                srcset="/images/slider/slider-mob3-min.jpg 1x, /images/slider/slider-mob3@2x-min.jpg 2x">
+                            <img class="bottom__photos" src="/images/slider/slider-mob3-min.jpg" alt="фото">
                         </picture>
                     </li>
                 </ul>
+                <!-- second-image__set -->
                 <ul class="second-image__set">
                     <li class="second-image__set-item">
                         <picture class="image-triple__set">
                             <source media="(min-width: 320px)"
-                                srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
-                            <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
+                                srcset="/images/slider/slider-desc4-min.jpg 1x, /images/slider/slider-desc4@2x-min.jpg 2x">
+                            <img class="bottom__photos" src="/images/slider/slider-desc4-min.jpg" alt="фото">
                         </picture>
                     </li>
                     <li class="second-image__set-item">
                         <picture class="image-triple__set">
                             <source media="(min-width: 320px)"
-                                srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
-                            <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
+                                srcset="/images/slider/slider-tablet5-min.jpg 1x, /images/slider/slider-tablet5@2x-min.jpg 2x">
+                            <img class="bottom__photos" src="/images/slider/slider-tablet5-min.jpg" alt="фото">
                         </picture>
                     </li>
                     <li class="second-image__set-item">
                         <picture class="image-triple__set">
                             <source media="(min-width: 320px)"
-                                srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
-                            <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
+                                srcset="/images/slider/slider-mob-min.jpg 1x, /images/slider/slider-tablet6@2x-min.jpg 2x">
+                            <img class="bottom__photos" src="/images/slider/slider-mob-min.jpg" alt="фото">
                         </picture>
                     </li>
                     <li class="second-image__set-item">
                         <picture class="image-triple__set">
                             <source media="(min-width: 320px)"
-                                srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
-                            <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
+                                srcset="/images/slider/slider-tablet7-min.jpg 1x, /images/slider/slider-tablet7@2x-min.jpg 2x">
+                            <img class="bottom__photos" src="/images/slider/slider-tablet7-min.jpg" alt="фото">
                         </picture>
                     </li>
                 </ul>
