fix input validation

--- a/src/sass/components/_registration.scss
+++ b/src/sass/components/_registration.scss
@@ -4,27 +4,29 @@
   background-size: cover;
 }
 
-.user-name-input:focus:valid {
-  border-color: var(--accent-color);
-  color: var(--accent-color);
-  box-shadow: none;
-}
+@media screen and (min-width: 320px) {
+  .user-name-input:focus:valid {
+    border-color: var(--accent-color);
+    color: var(--accent-color);
+    box-shadow: none;
+  }
 
-.user-name-input:focus:invalid {
-  border-color: red;
-  color: red;
-  box-shadow: none;
-}
-.user-tel-input:focus:valid {
-  border-color: var(--accent-color);
-  color: var(--accent-color);
-  box-shadow: none;
-}
+  .user-name-input:focus:invalid {
+    border-color: red;
+    color: red;
+    box-shadow: none;
+  }
+  .user-tel-input:focus:valid {
+    border-color: var(--accent-color);
+    color: var(--accent-color);
+    box-shadow: none;
+  }
 
-.user-tel-input:focus:invalid {
-  border-color: red;
-  color: red;
-  box-shadow: none;
+  .user-tel-input:focus:invalid {
+    border-color: red;
+    color: red;
+    box-shadow: none;
+  }
 }
 
 @media screen and (max-width: 767px) {
