--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,9 @@
 <section class="hero container">
   <div class="hero-text-box">
     <h1 class="hero-title">
-      Комплексная подготовка к ВНО по английскому языку
+      Комплексная <br />
+      подготовка к ВНО <br />
+      по английскому языку
     </h1>
     <p class="hero-text">
       <span class="secondary-text">Просто не будет.</span><br />Но ты
