--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -4,8 +4,8 @@
                 <h1 class="hidden-title">
                     problems
                 </h1>
-                <p class="problems-text">Главные проблемы<br> учеников<br>
-                    на English ВНО, <br> которые <br>
+                <p class="problems-text">Главные проблемы учеников<br>
+                    на English ВНО,  которые <br>
                     мы <span class="problem-text-exception">помогаем </span>решить
                 </p>
             </div>
