--- a/src/sass/layout/_description.scss
+++ b/src/sass/layout/_description.scss
@@ -1,13 +1,17 @@
 @media screen and(min-width:320px) and(max-width:767px) {
+  .description {
+    background: #ffffff;
+  }
   .description-list {
     display: block;
 
     .item {
       display: flex;
       justify-content: center;
-      padding-top: 30px;
+      padding-bottom: 30px;
       .description-text {
         max-width: 146px;
+        margin-left: 10px;
         font-weight: bold;
         font-size: 14px;
         line-height: 20px;
@@ -26,8 +30,6 @@
 @media screen and(min-width: 768px) and(max-width: 1344px) {
   .description-list {
     display: flex;
-
-    margin-top: 114px;
 
     .item {
       display: flex;
