--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,6 +1,11 @@
 @media screen and(min-width: 320px) and(max-width:767px) {
   .hero {
+    background-image: url('../images/hero/bgline-tablet.png');
+    background-repeat: no-repeat;
+    background-position: 40% 92%;
+    background-size: cover;
     margin-top: 50px;
+    padding-bottom: 75px;
     .hero-title {
       font-style: normal;
       font-weight: 800;
@@ -42,9 +47,6 @@
       justify-content: center;
       margin-top: 30px;
     }
-
-    background-image: url('../images/hero/bgline-mobile.png');
-    background-repeat: no-repeat;
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
@@ -60,8 +62,9 @@
     position: relative;
     display: flex;
     margin-top: 70px;
+    padding-bottom: 114px;
     .hero-text-box {
-      max-width: 270px;
+      max-width: 290px;
       .hero-title {
         font-style: normal;
         font-weight: 800;
@@ -101,15 +104,11 @@
       background-repeat: no-repeat;
     }
     .hero-images {
-      position: absolute;
-      right: 0;
-      top: 0;
-      display: flex;
-      justify-content: right;
+      margin-left: 50px;
     }
     background-image: url('../images/hero/bgline-tablet.png');
     background-repeat: no-repeat;
-    background-position: 100% 100%;
+    background-position: 100% 92%;
   }
 }
 @media screen and(min-width: 1344px ) {
@@ -118,7 +117,6 @@
     display: flex;
     margin-top: 70px;
     .hero-text-box {
-      max-width: 270px;
       .hero-title {
         font-style: normal;
         font-weight: 800;
@@ -158,11 +156,6 @@
       background-repeat: no-repeat;
     }
     .hero-images {
-      position: absolute;
-      right: 0;
-      top: 0;
-      display: flex;
-      justify-content: right;
     }
     background-image: url('../images/hero/bgline-tablet.png');
     background-repeat: no-repeat;
