--- a/src/partials/programm+why-us.html
+++ b/src/partials/programm+why-us.html
@@ -2,7 +2,7 @@
 <section class='programm'>
 
   <div class="programm__container container">
-    <h2 class="programm__title">Наша программа</h2>
+    <h2 class="programm__title" id='our-programm'>Наша программа</h2>
     <ul class="programm__semester-list list">
 
       <li class="programm__semester-list-item">
