Добавляет верхний маржин секции и меняет точку десктопа

--- a/src/sass/components/_teacher.scss
+++ b/src/sass/components/_teacher.scss
@@ -1,9 +1,10 @@
 $mobile: 320px;
 $tablet: 768px;
-$desktop: 1316px;
+$desktop: 1376px;
 
 //можно закинуть в базовые стили
 .section {
+  margin-top: 130px;
   margin-bottom: 50px;
 }
 //можно закинуть в базовые стили
