--- a/src/sass/utils/_problems.scss
+++ b/src/sass/utils/_problems.scss
@@ -100,13 +100,10 @@ position: relative;
         height: 560px;
         padding-top:100px;
         background-image: url(../images/problems/fire.png);
-<<<<<<< Updated upstream
         background-repeat: no-repeat;
         background-position: right bottom;
         background-size: 455px 472px; 
-
-=======
->>>>>>> Stashed changes
+        margin-bottom: 240px;
     }
     .section-problems{
         width: 1314px;
