--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -380,7 +380,7 @@
     font-size: 12px;
     line-height: 20px;
     padding-right: 50px;
-    padding-left: 79px;
+    padding-left: 52px;
   }
   .feature-list__item::after {
     position: absolute;
@@ -417,9 +417,9 @@
   }
 
   // =========2 секция=
-  .comments {
-    display: flex;
-  }
+  // .comments {
+  //   display: flex;
+  // }
 
   // .container_main_comment {
   //   padding-left: 40px;
@@ -445,32 +445,32 @@
   //   min-height: 150px;
   // }
 
-  .comments-list__name {
-    display: block;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 30px;
-    line-height: 1.233;
-    letter-spacing: 0.08em;
-    margin-bottom: 10px;
-    color: var(--orange-color);
-  }
-  .comments-list .comments-list__info {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.214;
-    letter-spacing: 0.08em;
-    color: var(--grey-color);
-    margin-bottom: 10px;
-  }
+  // .comments-list__name {
+  //   display: block;
+  //   font-style: normal;
+  //   font-weight: 800;
+  //   font-size: 30px;
+  //   line-height: 1.233;
+  //   letter-spacing: 0.08em;
+  //   margin-bottom: 10px;
+  //   color: var(--orange-color);
+  // }
+  // .comments-list .comments-list__info {
+  //   font-style: normal;
+  //   font-weight: 500;
+  //   font-size: 14px;
+  //   line-height: 1.214;
+  //   letter-spacing: 0.08em;
+  //   color: var(--grey-color);
+  //   margin-bottom: 10px;
+  // }
 
   .comments-list .comments-list-icon__vk {
     // outline: 1px solid green;
     width: 30px;
     height: 30px;
     margin-top: 20px;
-    margin-bottom: 120px;
+    // margin-bottom: 120px;
   }
   // .comments-list__description {
   //   font-style: normal;
@@ -483,30 +483,33 @@
   //   // margin-bottom: 51px;
   // }
 
-  .comments-list__item {
-    padding-left: auto;
-    // padding-right: 112px;
+  // .comments-list__item {
+  //   padding-left: auto;
+  //   // padding-right: 112px;
 
-    text-align: left;
-  }
+  //   text-align: left;
+  // }
 
-  .comments-list__description span {
-    display: inline-block;
-    color: var(--orange-color);
-    text-decoration: underline;
-  }
+  // .comments-list__description span {
+  //   display: inline-block;
+  //   color: var(--orange-color);
+  //   text-decoration: underline;
+  // }
   // ==========================================================================================
   // ==========================================================================================
+
   .mobile-comment-container {
-    position: relative;
-    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    // position: relative;
+    // box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
     padding-top: 50px;
-    padding-left: 40;
-    padding-right: 40px;
-    margin-left: 195px;
-    margin-right: 195px;
-    margin-bottom: 0;
-    padding-bottom: 0;
+    // padding-left: 112px;
+    // padding-right: 112px;
+    // padding-bottom: 51px;
+
+    // margin-left: 190px;
+    // margin-right: 190px;
   }
 
   .mobile-comment-container::before {
@@ -552,20 +555,20 @@
   // .comments-list {
   //   display: flex;
   // }
-  .comments .comments-main-foto__main-foto {
-    // outline: 1px solid green;
-    min-width: 150px;
-    min-height: 150px;
-    // margin-top: 50px;======================================
-    margin-right: auto;
-    margin-left: auto;
-  }
+  // .comments .comments-main-foto__main-foto {
+  //   // outline: 1px solid green;
+  //   min-width: 150px;
+  //   min-height: 150px;
+  //   // margin-top: 50px;======================================
+  //   margin-right: auto;
+  //   margin-left: auto;
+  // }
   .comments-list__name {
     display: block;
     font-style: normal;
     font-weight: 800;
-    font-size: 20px;
-    line-height: 1.2;
+    font-size: 30px;
+    line-height: 1.233;
     letter-spacing: 0.08em;
     margin-bottom: 20px;
     // margin-top: 50px;
@@ -574,27 +577,30 @@
   .comments-list .comments-list__info {
     font-style: normal;
     font-weight: 500;
-    font-size: 12px;
-    line-height: 1.25;
+    font-size: 14px;
+    line-height: 1.214;
     letter-spacing: 0.08em;
     color: var(--grey-color);
-    margin-bottom: 10px;
+    // margin-right: 380px;
+    // margin-bottom: 10px;
   }
 
-  .comments-list .comments-list-icon__vk {
-    // outline: 1px solid green;
-    width: 30px;
-    height: 30px;
-    margin-top: 20px;
-    // margin-bottom: 20px;
-    margin-right: auto;
-    margin-left: auto;
-  }
+  // .comments-list .comments-list-icon__vk {
+  //   // outline: 1px solid green;
+  //   width: 30px;
+  //   height: 30px;
+  //   margin-top: 20px;
+  //   // margin-bottom: 20px;
+  //   margin-right: auto;
+  //   margin-left: auto;
+  // }
   .comments-list__description {
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 20px;
+    max-width: 706px;
+    // margin-right: 112px;
     color: var(--mob-grey-color);
   }
 
@@ -605,23 +611,23 @@
   //   text-align: left;
   // }
 
-  .comments-list__description span {
-    // display: inline-block;
-    color: var(--orange-color);
-    text-decoration: underline;
-  }
+  // .comments-list__description span {
+  //   // display: inline-block;
+  //   color: var(--orange-color);
+  //   text-decoration: underline;
+  // }
   // ==================================================
   // ==============================================================
-  .comments-under__list {
-    display: flex;
-    // position: relative;
-    margin-right: 0;
-    margin-left: 0;
-    margin-top: 20px;
-    margin-bottom: 50px;
-    justify-content: center;
-    // outline: 1px solid red;
-  }
+  // .comments-under__list {
+  //   display: flex;
+  //   // position: relative;
+  //   margin-right: 0;
+  //   margin-left: 0;
+  //   margin-top: 20px;
+  //   margin-bottom: 50px;
+  //   justify-content: center;
+  //   // outline: 1px solid red;
+  // }
 
   .comments-under__item:nth-child(-n + 7) {
     margin-right: 30px;
