Добавил разметку, базовые стили

--- a/src/sass/layouts/_review.scss
+++ b/src/sass/layouts/_review.scss
@@ -1,4 +1,4 @@
-// Временно: контейнер, сбросы, стили
+// ---------- 🏁 ВРЕМЕННЫЕ СТИЛИ ----------
 
 .container.review-section {
   padding-left: 15px;
@@ -92,13 +92,19 @@ p {
   }
 }
 
-.review-slider {
-  display: flex;
+// ---------- 🏁 СЛАЙДЕР ----------
+
+.review-slide {
+  display: none;
   flex-direction: column;
   align-items: center;
+
+  &.current-slide {
+    display: flex;
+  }
 }
 
-.review-slider-foto {
+.review-slide-foto {
   margin-bottom: 29px;
 
   @media screen and (min-width: 730px) {
@@ -110,27 +116,30 @@ p {
   }
 }
 
-.review-slider-bg {
+.review-slide-bg {
   display: flex;
   justify-content: center;
 
   width: 100%;
   padding: 43px 0 26px;
+  margin-bottom: 30px;
 
   background-color: #fafafa;
 
   @media screen and (min-width: 730px) {
     width: 620px;
     padding: 47px 0 34px;
+    margin-bottom: 24px;
   }
 
   @media screen and (min-width: 1080px) {
     width: 926px;
     padding: 47px 0 39px;
+    margin-bottom: 15px;
   }
 }
 
-.review-slider-comment {
+.review-slide-comment {
   position: relative;
   z-index: 0;
 
@@ -140,6 +149,7 @@ p {
   font-weight: 500;
   font-size: 12px;
   line-height: 2.55;
+  color: $primaryTextColor;
 
   @media screen and (min-width: 730px) {
     width: 460px;
@@ -153,30 +163,133 @@ p {
     font-size: 16px;
     line-height: 1.86;
   }
+
+  &::before {
+    position: absolute;
+    z-index: -1;
+    left: 4px;
+    top: -15px;
+
+    content: '';
+    display: block;
+    width: 54px;
+    height: 40px;
+
+    background-image: url('../images/icons/brackets.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    @media screen and (min-width: 730px) {
+      left: -40px;
+      top: -17px;
+    }
+
+    @media screen and (min-width: 1080px) {
+      left: -37px;
+      top: -15px;
+    }
+  }
 }
 
-.review-slider-comment::before {
-  position: absolute;
-  z-index: -1;
-  left: 4px;
-  top: -15px;
+.review-slide-dot {
+  position: relative;
 
-  content: '';
-  display: block;
-  width: 54px;
-  height: 40px;
+  width: 4px;
+  height: 4px;
+  margin-bottom: 18px;
 
-  background-image: url('../images/icons/brackets.svg');
-  background-size: cover;
-  background-position: center;
+  border-radius: 50%;
+  background-color: #c7133e;
 
   @media screen and (min-width: 730px) {
-    left: -40px;
-    top: -17px;
+    margin-bottom: 14px;
+  }
+
+  &::before {
+    position: absolute;
+    transform: translateX(calc(-100% - 10px));
+
+    content: '';
+    display: inline-block;
+    width: 4px;
+    height: 4px;
+
+    border-radius: 50%;
+    background-color: #c7133e;
+  }
+
+  &::after {
+    position: absolute;
+    transform: translateX(calc(100% + 10px));
+
+    content: '';
+    display: inline-block;
+    width: 4px;
+    height: 4px;
+
+    border-radius: 50%;
+    background-color: #c7133e;
+  }
+}
+
+.review-slide-name {
+  margin-bottom: 30px;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.86;
+  text-align: center;
+  color: $primaryTextColor;
+
+  @media screen and (min-width: 730px) {
+    margin-bottom: 35px;
+
+    font-size: 16px;
   }
 
   @media screen and (min-width: 1080px) {
-    left: -37px;
-    top: -15px;
+    font-size: 20px;
+  }
+}
+
+.review-slide-sign {
+  position: relative;
+
+  width: 12px;
+  height: 12px;
+
+  border-radius: 50%;
+  background-color: #d9d9d9;
+
+  &::before,
+  &::after {
+    position: absolute;
+
+    content: '';
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+
+    border-radius: 50%;
+    background-color: #d9d9d9;
+  }
+
+  &::before {
+    transform: translateX(calc(-100% - 18px));
+  }
+
+  &::after {
+    transform: translateX(calc(100% + 18px));
+  }
+
+  &.current-sign,
+  &.current-sign-before::before,
+  &.current-sign-after::after {
+    border-radius: 0;
+    background-color: transparent;
+    background-image: url('../images/icons/home.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 }
