сделал моб. для header

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -26,7 +26,7 @@
   justify-content: space-between;
   align-items: center;
   padding-top: 6px;
-  padding-bottom: 6px;
+  margin-bottom: 27px;
 }
 
 .nav-list {
@@ -67,9 +67,11 @@
   }
 }
 
-.btn-menu-open {
+.btn-menu-open,
+.btn-menu-close {
   padding: 0;
-
+  border: none;
+  outline: none;
   background-color: getColor(background-main);
 }
 
@@ -81,6 +83,7 @@
 .btn-purchase {
   height: 44px;
   width: 209px;
+  padding: 0;
 
   font-size: 16px;
   line-height: 1.4;
@@ -100,10 +103,6 @@
   @media screen and (max-width: 767px) {
     display: none;
   }
-}
-
-.menu-open {
-  margin-left: 12px;
 }
 
 .icon-open {
