--- a/src/sass/components/_modal-button.scss
+++ b/src/sass/components/_modal-button.scss
@@ -4,7 +4,9 @@
   right: 0;
   bottom: 0;
   left: calc(100% - 250px);
-  
+
+  height: 502px;
+
   background-color: getColor(background-burger);
   opacity: 1;
   overflow-y: scroll;
@@ -39,7 +41,7 @@
   position: absolute;
   top: 23px;
   right: 28px;
-//   border: none;
+  //   border: none;
   background-color: transparent;
 }
 
@@ -55,15 +57,20 @@
   }
 }
 
+.menu-list {
+  margin: 0;
+  padding: 0;
+}
+
 .menu-item {
   border-top-width: 1px;
   border-top-style: solid;
-  border-top-color:#E18298;
+  border-top-color: #e18298;
 
   &:last-child {
     border-bottom-width: 1px;
     border-bottom-style: solid;
-    border-bottom-color: #E18298;
+    border-bottom-color: #e18298;
   }
 }
 
@@ -73,7 +80,7 @@
   padding-top: 11px;
   padding-right: 21px;
   padding-bottom: 12px;
-  padding-left: 21px;  
+  padding-left: 21px;
   color: getColor(white-color);
   font-family: 'DM Sans', sans-serif;
   font-size: 14px;
