--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -42,7 +42,10 @@
               height="14"
               aria-label="Mobile button"
             >
-              <use class="icon-open" href="./images/hero/burger.svg"></use>
+              <use
+                class="icon-open"
+                href="./images/hero/menu.svg#icon-burger"
+              ></use>
             </svg>
           </button>
 
@@ -92,7 +95,7 @@
       data-modal-close
     >
       <svg class="menu-close" width="14" height="14">
-        <use class="icon-close" href="./images/hero/close.svg"></use>
+        <use class="icon-close" href="./images/hero/menu.svg#icon-close"></use>
       </svg>
     </button>
 
