--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -7,14 +7,17 @@
     justify-content: space-between;
 
     @media screen and (max-width: 767px) {
-      padding-top: 30px;
+      padding-top: 10px;
+      padding-bottom: 10px;
     }
     @media screen and (max-width: 1279px) {
-      padding-top: 40px;
+      padding-top: 20px;
+      padding-bottom: 20px;
     }
     @media screen and (min-width: 1280px) {
       align-items: baseline;
-      padding-top: 34px;
+      padding-top: 20px;
+      padding-bottom: 20px;
     }
   }
 }
