--- a/src/partials/howIItsMade.html
+++ b/src/partials/howIItsMade.html
@@ -13,6 +13,17 @@
                     ./images/howItsMade/made_768@2x.png 1536w,
                     ./images/howItsMade/made_1200@2x.png 2400w
                 " width="100%" />
+                <div style="display: none;" class="made-reade-more">
+                    <h4 class="made-read-more-header">More for made</h4>
+                    <p class="made-read-more-first">Lorem ipsum dolor sit amet, consectetur adipisicing 
+                        elit. Enim architecto necessitatibus, 
+                        molestiae soluta pariatur adipisci impedit sapiente eaque alias ipsa iusto. 
+                        Unde, ex! Sunt id maiores vitae voluptate. Laboriosam, officia!</p>
+                    <p class="made-read-more-second">Lorem ipsum dolor sit amet, consectetur adipisicing 
+                        elit. Enim architecto necessitatibus, 
+                        molestiae soluta pariatur adipisci impedit sapiente eaque alias ipsa iusto. 
+                        Unde, ex! Sunt id maiores vitae voluptate. Laboriosam, officia!</p>
+                </div>
             </div>
             <div class="made-discription-text">
                 <p class="made-discription-first">
