добвляю id для секции

--- a/src/partials/how-we-do-it.html
+++ b/src/partials/how-we-do-it.html
@@ -1,4 +1,4 @@
-<section class="how-we-do-it">
+<section id="study-options" class="how-we-do-it">
     <div class="container">
         <h2 class="how-we-do-it__title">Как мы это делаем</h2>
 
