--- a/src/sass/components/_teacher.scss
+++ b/src/sass/components/_teacher.scss
@@ -4,8 +4,16 @@ $desktop: 1376px;
 
 //можно закинуть в базовые стили
 .section {
-  margin-top: 130px;
-  margin-bottom: 50px;
+  margin-top: 39px;
+  //margin-bottom: 50px;
+
+  @media screen and (min-width: $tablet) {
+    margin-top: 50px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-top: 130px;
+  }
 }
 //можно закинуть в базовые стили
 %section__title {
